--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand logo-img" href="#">
+    <a class="navbar-brand logo-img" routerLink="">
       <img src="https://icon-library.net/images/github-icon-png/github-icon-png-29.jpg" alt="github icon" class="logo-img">
     </a>
-    <a class="navbar-brand" href="#">GitHub</a>
+    <a class="navbar-brand" routerLink="">GitHub</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,16 +10,16 @@
     <section class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" routerLink="/starred">Starred Repos </a>
+              <a class="nav-link" routerLink="/starred">Favorite Repos </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/create-repo">Create Repo</a>
             </li>
         </ul>
         <section class="search-bar">
-          <input #search (keyup)='onSearch(search.value)'  class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <input #search (keyup)='onSearch(search.value)'  class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search">
           <button (click) = "routeToSearch()">Search</button>
         </section>
-      </section>
-  </nav>
+    </section>
+</nav>
 <router-outlet></router-outlet>
