--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -7,14 +7,17 @@
                 <p> Location: {{prof.location}}<br/>
                     Followers: {{prof.followers}}<br/>
                     Public Repos: {{prof.public_repos}}<br/>
-                    Private Repos: {{prof.total_private_repos}}</p>
+                    Public Gists: {{prof.public_gists}}</p>
             </section>
             <section class="col-md-8 repos">
                 <h3>Search Results: </h3>
                 <hr>
                 <section class="row">
-                    <article *ngFor="let search of search.items" class="card card-body col-md-5 repos">
-                        <h3>{{search.name}}</h3>
+                    <h3 *ngIf="search.total_count == 0">No such Repositories Found!</h3>
+                    <article *ngFor="let search of search.items; index as i" class="card card-body col-md-5 repos">
+                        <button type="button" class="btn btn-link">
+                            <h3 (click)="routeToRepo(i)">{{search.name}}</h3>
+                        </button>
                         <p>{{search.description}}</p>
                     </article>
                 </section>
